--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,10 @@
-
-/* Your CSS Code here. */
+.holder{
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    background-color: black;
+}
+.holder>div{
+    background-color: blue;
+    color: white;
+}
